Fix overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,11 @@
   padding: 0;
 }
 
+body,
+html {
+  overflow: hidden;
+}
+
 body {
   font-family: "Roboto", sans-serif;
 }
