--- a/src/templates/DefaultPageTemplate/DefaultPageTemplate.scss
+++ b/src/templates/DefaultPageTemplate/DefaultPageTemplate.scss
@@ -8,4 +8,5 @@
 
 #content {
   flex: 1;
+  overflow-y: auto;
 }
